tests/ui/resolve/loops.stderr
error: variable declaration statements are not allowed as the body of a loop (for, while, do while), meaning they must be inside of a block
  --> ROOT/tests/ui/resolve/loops.sol:LL:CC
   |
LL |     while (a == 0) uint a = 0;
   |                    ^^^^^^^^^^
   |

error: variable declaration statements are not allowed as the body of a loop (for, while, do while), meaning they must be inside of a block
  --> ROOT/tests/ui/resolve/loops.sol:LL:CC
   |
LL |     do uint c; while (c == 0);
   |        ^^^^^^
   |

error: variable declaration statements are not allowed as the body of a loop (for, while, do while), meaning they must be inside of a block
  --> ROOT/tests/ui/resolve/loops.sol:LL:CC
   |
LL |     for (; false; e++) uint e;
   |                        ^^^^^^
   |

error: aborting due to 3 previous errors

